Baseline_LLM_transformer.ipynb added

--- a/.env
+++ b/.env
@@ -1,6 +1,9 @@
-# OLLAMA_MODEL = 'llama2:13b'
-OLLAMA_MODEL = 'deepseek-r1:8b'
-OLLAMA_HOST = 'http://192.168.0.110:11434'
+HF_HOME=/media/luna/huggingface
 
-DATA_DIR = 'data'
-MODELS_DIR = 'models'
+# OLLAMA_MODEL = 'llama2:13b'
+OLLAMA_MODEL = deepseek-r1:8b
+OLLAMA_HOST = http://192.168.0.110:11434
+
+DATA_DIR = data
+MODELS_DIR = models
+STATISTIC_DIR = statistic
